fix: asciinema spacing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
-        <title>~jurka_jan</title>
+        <title>jurka_jan</title>
 
         <script>
             document.addEventListener("mousemove", (e) => {
@@ -16,7 +16,7 @@
     <body>
         <div id="HEAD" class="center-left">
             <h1>Jan Jurka</h1>
-            <p>"If my .bashrc leaks, even the Hague might notice"</p>
+            <p><em>"If my .bashrc leaks, even the Hague might notice"</em></p>
         </div>
         <div class="repo">Stuff I made</div>
         <div class="commit" id="wanikani-tui">
@@ -25,6 +25,12 @@
                     >WaniKani TUI</a
                 >
             </h2>
+            <div class="tags">
+                <div class="tag">Ruby</div>
+                <div class="tag">SQLite</div>
+                <div class="tag">API integration</div>
+                <div class="tag">Test Suit</div>
+            </div>
             <div>
                 <p>
                     Terminal-based client for the
@@ -34,18 +40,12 @@
                 </p>
                 <p>For when you need to do your reviews over SSH</p>
             </div>
-            <script
-                src="https://asciinema.org/a/62X3qNfa7ZOnVSefpc0R23sHn.js"
-                id="asciicast-62X3qNfa7ZOnVSefpc0R23sHn"
-                async="true"
-                style="margin: 2rem 0 0 0"
-            ></script>
-            <div class="tags">
-                <span>Tags:</span>
-                <div class="tag">Ruby</div>
-                <div class="tag">SQLite</div>
-                <div class="tag">API integration</div>
-                <div class="tag">Test Suit</div>
+            <div style="margin: -1rem 0 -3rem 0">
+                <script
+                    src="https://asciinema.org/a/SR1GZvhXX60ClSV1Eb9QG7yur.js"
+                    id="asciicast-SR1GZvhXX60ClSV1Eb9QG7yur"
+                    async="true"
+                ></script>
             </div>
         </div>
     </body>
