feat: add role subheaders

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <body>
         <div id="HEAD" class="center-left">
             <h1>Jan Jurka</h1>
+            <p>
+                Student | Software Developer | Arch User
+                <span class="small">(this is a threat)</span>
+            </p>
             <p><em>"If my .bashrc leaks, even the Hague might notice"</em></p>
         </div>
         <div class="repo">Stuff I made</div>
