feat: add L+ratio

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="tag">Ruby</div>
                 <div class="tag">SQLite</div>
                 <div class="tag">API integration</div>
-                <div class="tag">Test Suit</div>
+                <div class="tag">Test Suite</div>
             </div>
             <div>
                 <p>
@@ -48,6 +48,103 @@
                 <script
                     src="https://asciinema.org/a/SR1GZvhXX60ClSV1Eb9QG7yur.js"
                     id="asciicast-SR1GZvhXX60ClSV1Eb9QG7yur"
+                    async="true"
+                ></script>
+            </div>
+        </div>
+        <div class="commit" id="l_ratio">
+            <h2>
+                <a href="https://github.com/Everesh/L-Ratio">L+Ratio</a>
+            </h2>
+            <div class="tags">
+                <div class="tag">Ruby</div>
+                <div class="tag">Transpiler</div>
+            </div>
+            <div>
+                <p>Accessibility-focused Ruby transpiler</p>
+                <ul>
+                    <li>
+                        <span>Single-line syntax</span>
+                        <ul>
+                            <li>
+                                No more fidgeting with newlines, let your text
+                                editor wrap the code wherever.
+                            </li>
+                            <li>
+                                No more hunting for improper indentation, you
+                                don't need to indent!
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span>Reduced alphabet knowledge entry barrier </span>
+                        <ul>
+                            <li>
+                                Why spend years learning the whole alphabet...
+                                twice?! (seriously why do we need uppercase)
+                            </li>
+                            <li>
+                                Just learn the fundamental
+                                <span class="invert">l, +, r, a, t, i, o</span>
+                                and you're good to go.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span>Flexible comments</span>
+                        <ul>
+                            <li>
+                                No need to fret whether to use
+                                <span class="invert">l//, #, or &lt;!--</span>
+                                for your comments.
+                            </li>
+                            <li>
+                                Place your comments over any unobstructed
+                                substring of <span class="invert">l</span>'s,
+                                L+Ratio does not care!
+                            </li>
+                            <li>
+                                Keep in mind not to use the
+                                <span class="invert">+</span> and
+                                <span class="invert">ratio</span> keywords in
+                                your comments.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span>Superbly human-readable</span>
+                        <ul>
+                            <li>
+                                Whitespace-free syntax prevents your eyes from
+                                panicking at the end of words and wandering all
+                                over the screen. Your eyes will instead be
+                                guided smoothly through the code!
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span>Unambiguous code sharing</span>
+                        <ul>
+                            <li>
+                                Ever talked with a JS dev about Maps? Which do
+                                they mean,
+                                <span class="invert">arr.map()</span> or new
+                                <span class="invert">Map()</span>? Sometimes I
+                                question whether they even know themselves.
+                            </li>
+                            <li>
+                                Variable bursts of
+                                <span class="invert">l</span>'s are
+                                unmistakable.
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div style="margin: -1rem 0 -3rem 0">
+                <script
+                    src="https://asciinema.org/a/RYRhqOn7diXif3zhodFycy1gQ.js"
+                    id="asciicast-RYRhqOn7diXif3zhodFycy1gQ"
                     async="true"
                 ></script>
             </div>
