--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <div class="tag">SQLite</div>
                 <div class="tag">API integration</div>
                 <div class="tag">Test Suite</div>
+                <div class="tag">Customizable</div>
             </div>
             <div>
                 <p>
@@ -51,6 +52,46 @@
                     async="true"
                 ></script>
             </div>
+        </div>
+        <div class="commit" id="wanikani-elementary-dark">
+            <h2>
+                <a href="https://github.com/Everesh/WaniKani-ElementaryDark"
+                    >WaniKani Elementary Dark</a
+                >
+            </h2>
+            <div class="tags">
+                <div class="tag">SCSS</div>
+                <div class="tag">Bash</div>
+                <div class="tag">Stylus</div>
+                <div class="tag">Customizable</div>
+            </div>
+            <div>
+                <p>
+                    Custom stylesheet for
+                    <a href="https://www.wanikani.com//about">WaniKani</a> with
+                    thousands of users across
+                    <a
+                        href="https://userstyles.world/style/22026/wanikani-elementary-dark"
+                        >version 3</a
+                    >
+                    and
+                    <a
+                        href="https://userstyles.world/style/8103/legacy-wanikani-elementary-dark"
+                        >version 2</a
+                    >.
+                </p>
+                <p>
+                    You can find more about it on the
+                    <a
+                        href="https://community.wanikani.com/t/userstyle-elementary-dark/60137/80"
+                        >WaniKani forum</a
+                    >.
+                </p>
+            </div>
+            <img
+                style="width: 100%; height: auto; margin: 1rem 0"
+                src="https://github.com/user-attachments/assets/4892bc85-4e6b-4d77-8d09-67b7652b7248"
+            />
         </div>
         <div class="commit" id="l_ratio">
             <h2>
