--- a/index.html
+++ b/index.html
@@ -190,5 +190,37 @@
                 ></script>
             </div>
         </div>
+        <div class="commit" id="mastermind">
+            <h2>
+                <a href="https://github.com/Everesh/odin-mastermind"
+                    >Mastermind</a
+                >
+            </h2>
+            <div class="tags">
+                <div class="tag">Ruby</div>
+                <div class="tag">Game</div>
+                <div class="tag">Computer Player</div>
+            </div>
+            <div>
+                <p>
+                    Implementation of the classical game of
+                    <a
+                        href="https://en.wikipedia.org/wiki/Mastermind_(board_game)"
+                        >Mastermind</a
+                    >.
+                </p>
+                <p>
+                    Try to crack a color code or make one yourself and watch a
+                    machine struggle with it!
+                </p>
+            </div>
+            <div style="margin: 0 0 -3rem 0">
+                <script
+                    src="https://asciinema.org/a/mhS0ifGKSkFqwHSfI2PietkD3.js"
+                    id="asciicast-mhS0ifGKSkFqwHSfI2PietkD3"
+                    async="true"
+                ></script>
+            </div>
+        </div>
     </body>
 </html>
