feat: add yt-dlp-wrapper

--- a/index.html
+++ b/index.html
@@ -222,5 +222,30 @@
                 ></script>
             </div>
         </div>
+        <div class="commit" id="yt-dlp-wrapper">
+            <h2>
+                <a href="https://github.com/Everesh/yt-dlp-gui"
+                    >yt-dlp-wrapper</a
+                >
+            </h2>
+            <div class="tags">
+                <div class="tag">Python</div>
+                <div class="tag">GUI</div>
+                <div class="tag">CLI wrapper</div>
+            </div>
+            <div>
+                <p>
+                    A graphical wrapper for
+                    <a href="https://github.com/yt-dlp/yt-dlp">yt-dlp</a>.
+                </p>
+                <p>
+                    For those who were not yet enlightened by the command line!
+                </p>
+            </div>
+            <img
+                style="width: 100%; height: auto; margin: 1rem 0"
+                src="https://raw.githubusercontent.com/Everesh/yt-dlp-gui/refs/heads/main/prev.png"
+            />
+        </div>
     </body>
 </html>
