feat: add chess

--- a/index.html
+++ b/index.html
@@ -216,8 +216,37 @@
             </div>
             <div style="margin: 0 0 -3rem 0">
                 <script
-                    src="https://asciinema.org/a/mhS0ifGKSkFqwHSfI2PietkD3.js"
-                    id="asciicast-mhS0ifGKSkFqwHSfI2PietkD3"
+                    src="https://asciinema.org/a/Vmo27kwH44YTSj2ZQA3u9UqlD.js"
+                    id="asciicast-Vmo27kwH44YTSj2ZQA3u9UqlD"
+                    async="true"
+                ></script>
+            </div>
+        </div>
+        <div class="commit" id="chess">
+            <h2>
+                <a href="https://github.com/Everesh/odin-chess">Chess</a>
+            </h2>
+            <div class="tags">
+                <div class="tag">Ruby</div>
+                <div class="tag">Game</div>
+            </div>
+            <div>
+                <p>
+                    Implementation of the classical game of
+                    <a href="https://en.wikipedia.org/wiki/Chess">Chess</a>.
+                </p>
+                <p>
+                    Not only supporting but <em>demanding</em> proper
+                    <a
+                        href="https://en.wikipedia.org/wiki/Algebraic_notation_(chess)"
+                        >algebraic notation</a
+                    >!
+                </p>
+            </div>
+            <div style="margin: 0 0 -3rem 0">
+                <script
+                    src="https://asciinema.org/a/YxYdtcwOhSqRXQtJ9m6YvJfkz.js"
+                    id="asciicast-YxYdtcwOhSqRXQtJ9m6YvJfkz"
                     async="true"
                 ></script>
             </div>
