chore: update highlighting

--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@
                     <a href="https://en.wikipedia.org/wiki/Chess">Chess</a>.
                 </p>
                 <p>
-                    Not only supporting but <em>demanding</em> proper
+                    Not only supporting but
+                    <span class="invert">demanding</span> proper
                     <a
                         href="https://en.wikipedia.org/wiki/Algebraic_notation_(chess)"
                         >algebraic notation</a
