feat: add links to socials

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         </script>
     </head>
     <body>
+        <div id="socials">
+            <a href="https://www.linkedin.com/in/jan-jurka/">[LinkedIn]</a>
+            <a href="https://github.com/Everesh">[GitHub]</a>
+        </div>
         <div id="HEAD" class="center-left">
             <h1>Jan Jurka</h1>
             <p>
