feat: extract webpage

--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
         <link rel="stylesheet" href="style.css" />
         <title>jurka_jan</title>
 
-        <script>
-            document.addEventListener("mousemove", (e) => {
-                document.body.style.setProperty("--mouse-x", `${e.clientX}px`);
-                document.body.style.setProperty("--mouse-y", `${e.clientY}px`);
-            });
-        </script>
+        <script src="script.js"></script>
     </head>
     <body>
         <div id="socials">
@@ -140,7 +135,7 @@
                         <ul>
                             <li>
                                 No need to fret whether to use
-                                <span class="invert">l//, #, or &lt;!--</span>
+                                <span class="invert">//, #, or &lt;!--</span>
                                 for your comments.
                             </li>
                             <li>
@@ -173,9 +168,9 @@
                             <li>
                                 Ever talked with a JS dev about Maps? Which do
                                 they mean,
-                                <span class="invert">arr.map()</span> or new
-                                <span class="invert">Map()</span>? Sometimes I
-                                question whether they even know themselves.
+                                <span class="invert">arr.map()</span> or
+                                <span class="invert">new Map()</span>? Sometimes
+                                I question whether they even know themselves.
                             </li>
                             <li>
                                 Variable bursts of
