chore: checkpoint whoami

--- a/index.html
+++ b/index.html
@@ -21,7 +21,28 @@
             </p>
             <p><em>"If my .bashrc leaks, even the Hague might notice"</em></p>
         </div>
-        <div class="repo">Stuff I made</div>
+        <div class="repo">$ whoami</div>
+        <div class="commit" id="about">
+            <h2>Hey, I'm Jan</h2>
+            <p style="text-decoration: line-through">
+                I enjoy finding creative solutions to complex problems
+            </p>
+            <p>
+                Im a mostly self tought developer, whit genuine interest in
+                technology. These are not just empty words, I
+                <a
+                    href="https://excaliburzero.gitbooks.io/an-introduction-to-linux-ricing/content/ricing.html"
+                    >rice linux</a
+                >
+                and do
+                <a
+                    href="https://en.wikipedia.org/wiki/Capture_the_flag_(cybersecurity)"
+                    >CTFs</a
+                >
+                for fun.
+            </p>
+        </div>
+        <div class="repo">$ ls ~/code</div>
         <div class="commit" id="wanikani-tui">
             <h2>
                 <a href="https://github.com/Everesh/WaniKani-TUI"
