chore: whoami checkpoint

--- a/index.html
+++ b/index.html
@@ -28,18 +28,57 @@
                 I enjoy finding creative solutions to complex problems
             </p>
             <p>
-                Im a mostly self tought developer, whit genuine interest in
+                I'm a mostly self-taught developer with genuine interest in
                 technology. These are not just empty words, I
                 <a
                     href="https://excaliburzero.gitbooks.io/an-introduction-to-linux-ricing/content/ricing.html"
-                    >rice linux</a
+                    >rice Linux</a
                 >
                 and do
                 <a
                     href="https://en.wikipedia.org/wiki/Capture_the_flag_(cybersecurity)"
                     >CTFs</a
                 >
-                for fun.
+                for fun for crying out loud.
+            </p>
+            <p>
+                When it comes to my tech stack, I dont really have one. As long
+                as you give me a
+                <a
+                    href="https://en.wikipedia.org/wiki/Garbage_collection_(computer_science)"
+                    >GC</a
+                >, I can make do with basically anything. But since this genuine
+                answer is bad for
+                <a
+                    href="https://en.wikipedia.org/wiki/Search_engine_optimization"
+                    >SEO</a
+                >, let me add some stuff that I feel comfortable with:
+            </p>
+            <p style="font-weight: bold">
+                Languages: <span class="invert">Ruby</span>,<span class="invert"
+                    >Python</span
+                >,<span class="invert">TypeScript</span>,<span class="invert"
+                    >JavaScript</span
+                >,<span class="outline">Java</span>,<span class="outline"
+                    >Go</span
+                >,<span class="outline">Bash</span>,<span class="outline"
+                    >C</span
+                >,<span class="outline">C++</span>
+            </p>
+            <p style="font-weight: bold">
+                Pseudo-Laguages: <span class="invert">SQL</span>,<span
+                    class="invert"
+                    >HTML</span
+                >,<span class="invert">CSS</span>,<span class="invert"
+                    >SASS</span
+                >
+            </p>
+            <p style="font-weight: bold">
+                Tools: <span class="invert">Git</span>,<span class="invert"
+                    >Linux</span
+                >,<span class="invert">Jira</span>,<span class="outline"
+                    >Jenkins</span
+                >
             </p>
         </div>
         <div class="repo">$ ls ~/code</div>
