feat: finish main whoami block

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 for fun for crying out loud.
             </p>
             <p>
-                When it comes to my tech stack, I dont really have one. As long
+                When it comes to my tech stack, I don't really have one. As long
                 as you give me a
                 <a
                     href="https://en.wikipedia.org/wiki/Garbage_collection_(computer_science)"
@@ -54,32 +54,29 @@
                     >SEO</a
                 >, let me add some stuff that I feel comfortable with:
             </p>
-            <p style="font-weight: bold">
-                Languages: <span class="invert">Ruby</span>,<span class="invert"
-                    >Python</span
-                >,<span class="invert">TypeScript</span>,<span class="invert"
-                    >JavaScript</span
-                >,<span class="outline">Java</span>,<span class="outline"
-                    >Go</span
-                >,<span class="outline">Bash</span>,<span class="outline"
-                    >C</span
-                >,<span class="outline">C++</span>
-            </p>
-            <p style="font-weight: bold">
-                Pseudo-Laguages: <span class="invert">SQL</span>,<span
-                    class="invert"
-                    >HTML</span
-                >,<span class="invert">CSS</span>,<span class="invert"
-                    >SASS</span
-                >
-            </p>
-            <p style="font-weight: bold">
-                Tools: <span class="invert">Git</span>,<span class="invert"
-                    >Linux</span
-                >,<span class="invert">Jira</span>,<span class="outline"
-                    >Jenkins</span
-                >
-            </p>
+            <div class="wrapper">
+                <span>Languages:</span><span class="invert">Ruby</span
+                ><span class="invert">Python</span
+                ><span class="invert">TypeScript</span
+                ><span class="invert">JavaScript</span
+                ><span class="outline">Java</span><span class="outline">Go</span
+                ><span class="outline">Bash</span><span class="outline">C</span
+                ><span class="outline">C++</span>
+            </div>
+            <div class="wrapper">
+                <span>Pseudo-Languages:</span><span class="invert">SQL</span
+                ><span class="invert">HTML</span><span class="invert">CSS</span
+                ><span class="invert">SASS</span
+                ><span class="invert">Markdown</span
+                ><span class="outline">LaTeX</span>
+            </div>
+            <div class="wrapper">
+                <span>Tools:</span><span class="invert">Git</span
+                ><span class="invert">Linux</span><span class="invert">Vim</span
+                ><span class="invert">Make</span><span class="invert">Jira</span
+                ><span class="outline">Jenkins</span
+                ><span class="outline">Mocha</span>
+            </div>
         </div>
         <div class="repo">$ ls ~/code</div>
         <div class="commit" id="wanikani-tui">
@@ -111,6 +108,10 @@
                     async="true"
                 ></script>
             </div>
+        </div>
+        <div class="branch">
+            <div class="checkout"></div>
+            <div class="checkout"></div>
         </div>
         <div class="commit" id="wanikani-elementary-dark">
             <h2>
