feat: add education and employment sections

--- a/index.html
+++ b/index.html
@@ -78,6 +78,28 @@
                 ><span class="outline">Mocha</span>
             </div>
         </div>
+        <div class="branch">
+            <div class="checkout">
+                <h2>Education</h2>
+                <a href="https://fis.vse.cz/english/">
+                    <h3>
+                        Prague University of Economics and Business<br /><span
+                            style="font-weight: normal"
+                            >Faculty of Informatics and Statistics</span
+                        >
+                    </h3></a
+                >
+                <p><em>September 2024 - Present</em></p>
+            </div>
+            <div class="checkout">
+                <h2>Work Experience</h2>
+                <h3 style="margin: 1rem 0 0 1rem">QA Automation Trainee</h3>
+                <a href="https://www.kb.cz/cs/obcane"
+                    ><h3 style="margin: 0 0 1rem 1rem">Komerční banka</h3></a
+                >
+                <p><em>August 2025 - Present</em></p>
+            </div>
+        </div>
         <div class="repo">$ ls ~/code</div>
         <div class="commit" id="wanikani-tui">
             <h2>
@@ -108,10 +130,6 @@
                     async="true"
                 ></script>
             </div>
-        </div>
-        <div class="branch">
-            <div class="checkout"></div>
-            <div class="checkout"></div>
         </div>
         <div class="commit" id="wanikani-elementary-dark">
             <h2>
