--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Jan Jurka - Student, Software Developer, Menace to Society"
+        />
+        <meta property="og:title" content="Jan Jurka" />
+        <meta
+            property="og:description"
+            content="Student | Software Developer | Arch User"
+        />
+        <meta property="og:type" content="website" />
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text x='50' y='70' font-family='monospace' font-size='60' font-weight='bold' fill='%23ecbe80' text-anchor='middle'>&gt;_</text></svg>" />
         <link rel="stylesheet" href="style.css" />
-        <title>jurka_jan</title>
+        <title>Jan Jurka</title>
 
         <script src="script.js"></script>
     </head>
@@ -81,8 +92,9 @@
         <div class="branch">
             <div class="checkout">
                 <h2>Education</h2>
+                <h3 style="margin: 1rem 0 0 1rem">BSc in Applied Informatics</h3>
                 <a href="https://fis.vse.cz/english/">
-                    <h3>
+                    <h3 style="margin: 0 0 1rem 1rem">
                         Prague University of Economics and Business<br /><span
                             style="font-weight: normal"
                             >Faculty of Informatics and Statistics</span
@@ -169,6 +181,7 @@
             <img
                 style="width: 100%; height: auto; margin: 1rem 0"
                 src="https://github.com/user-attachments/assets/4892bc85-4e6b-4d77-8d09-67b7652b7248"
+                alt="Demo GIF"
             />
         </div>
         <div class="commit" id="l_ratio">
@@ -353,6 +366,7 @@
             <img
                 style="width: 100%; height: auto; margin: 1rem 0"
                 src="https://raw.githubusercontent.com/Everesh/yt-dlp-gui/refs/heads/main/prev.png"
+                alt="Screenshot of the GUI"
             />
         </div>
     </body>
