chore: spacning of whomai

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
             content="Student | Software Developer | Arch User"
         />
         <meta property="og:type" content="website" />
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text x='50' y='70' font-family='monospace' font-size='60' font-weight='bold' fill='%23ecbe80' text-anchor='middle'>&gt;_</text></svg>" />
+        <link
+            rel="icon"
+            href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text x='50' y='70' font-family='monospace' font-size='60' font-weight='bold' fill='%23ecbe80' text-anchor='middle'>&gt;_</text></svg>"
+        />
         <link rel="stylesheet" href="style.css" />
         <title>Jan Jurka</title>
 
@@ -92,7 +95,9 @@
         <div class="branch">
             <div class="checkout">
                 <h2>Education</h2>
-                <h3 style="margin: 1rem 0 0 1rem">BSc in Applied Informatics</h3>
+                <h3 style="margin: 1rem 0 0 1rem">
+                    BSc in Applied Informatics
+                </h3>
                 <a href="https://fis.vse.cz/english/">
                     <h3 style="margin: 0 0 1rem 1rem">
                         Prague University of Economics and Business<br /><span
@@ -107,7 +112,9 @@
                 <h2>Work Experience</h2>
                 <h3 style="margin: 1rem 0 0 1rem">QA Automation Trainee</h3>
                 <a href="https://www.kb.cz/cs/obcane"
-                    ><h3 style="margin: 0 0 1rem 1rem">Komerční banka</h3></a
+                    ><h3 style="margin: 0 0 1rem 1rem">
+                        Komerční banka, a.s.
+                    </h3></a
                 >
                 <p><em>August 2025 - Present</em></p>
             </div>
