chore: reformulate the same thing for the 10th time

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 ><span class="outline">C++</span>
             </div>
             <div class="wrapper">
-                <span>Pseudo-Languages:</span><span class="invert">SQL</span
+                <span>Supplementary:</span><span class="invert">SQL</span
                 ><span class="invert">HTML</span><span class="invert">CSS</span
                 ><span class="invert">SASS</span
                 ><span class="invert">Markdown</span
