chore: update whoami section header

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <p><em>September 2024 - Present</em></p>
             </div>
             <div class="checkout">
-                <h2>Work Experience</h2>
+                <h2>Occupation</h2>
                 <h3 style="margin: 1rem 0 0 1rem">QA Automation Trainee</h3>
                 <a href="https://www.kb.cz/cs/obcane"
                     ><h3 style="margin: 0 0 1rem 1rem">
