chore: add top-margin to section dividers

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </p>
             <p><em>"If my .bashrc leaks, even the Hague might notice"</em></p>
         </div>
-        <div class="repo">$ whoami</div>
+        <div class="repo no-margin-top" id="whoami">$ whoami</div>
         <div class="commit" id="about">
             <h2>Hey, I'm Jan</h2>
             <p style="text-decoration: line-through">
@@ -119,7 +119,7 @@
                 <p><em>August 2025 - Present</em></p>
             </div>
         </div>
-        <div class="repo">$ ls ~/code</div>
+        <div class="repo" id="code">$ ls ~/code</div>
         <div class="commit" id="wanikani-tui">
             <h2>
                 <a href="https://github.com/Everesh/WaniKani-TUI"
