add color switch

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
     </head>
     <body>
         <div id="socials">
+            <button id="theme-toggle">[Theme: Light]</button>
             <a href="https://www.linkedin.com/in/jan-jurka/">[LinkedIn]</a>
             <a href="https://github.com/Everesh">[GitHub]</a>
         </div>
         <div id="HEAD" class="center-left">
+            <span class="hidden" style="margin-top: -2.5rem">Hey, I'm</span>
             <h1>Jan Jurka</h1>
             <p>
                 Student | Software Developer | Arch User
