update hidden stuff

--- a/index.html
+++ b/index.html
@@ -29,15 +29,19 @@
             <a href="https://github.com/Everesh">[GitHub]</a>
         </div>
         <div id="HEAD" class="center-left">
-            <span class="hidden" style="margin-top: -2.5rem">Hey, I'm</span>
             <h1>Jan Jurka</h1>
             <p>
-                Student | Software Developer | Arch User
-                <span class="small">(this is a threat)</span>
+                Student | Software Developer<span class="hidden">
+                    | Arch User (this is a threat)</span
+                >
             </p>
-            <p><em>"If my .bashrc leaks, even the Hague might notice"</em></p>
+            <p>
+                <em>"If my .bashrc leaks, even the Hague might notice"</em>
+            </p>
         </div>
-        <div class="repo no-margin-top" id="whoami">$ whoami</div>
+        <div class="repo no-margin-top" id="whoami">
+            $ whoami<span class="hidden">, whoareyou, whatareyoudoinghere</span>
+        </div>
         <div class="commit" id="about">
             <h2>Hey, I'm Jan</h2>
             <p>
@@ -118,7 +122,11 @@
                 <p><em>August 2025 - Present</em></p>
             </div>
         </div>
-        <div class="repo" id="code">$ ls ~/code</div>
+        <div class="repo" id="code">
+            $ ls ~/code<span class="hidden"
+                >/the_few_somewhat_decent_projects</span
+            >
+        </div>
         <div class="commit" id="wanikani-tui">
             <h2>
                 <a href="https://github.com/Everesh/WaniKani-TUI"
