--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="wrapper">
                 <span>Tools:</span><span class="invert">Git</span
                 ><span class="invert">Linux</span><span class="invert">Vim</span
-                ><span class="invert">Make</span><span class="invert">Jira</span
+                ><span class="invert">Jira</span
                 ><span class="outline">Jenkins</span
                 ><span class="outline">Mocha</span>
             </div>
