--- a/index.html
+++ b/index.html
@@ -39,165 +39,165 @@
                 <em>"If my .bashrc leaks, even the Hague might notice"</em>
             </p>
         </div>
-        <div class="repo no-margin-top" id="whoami">
-            $ whoami<span class="hidden">, whoareyou, whatareyoudoinghere</span>
-        </div>
-        <div class="commit" id="about">
-            <h2>Hey, I'm Jan</h2>
-            <p>
-                I'm a mostly self-taught developer with genuine interest in
-                technology. These are not just empty words, I
-                <a
-                    href="https://excaliburzero.gitbooks.io/an-introduction-to-linux-ricing/content/ricing.html"
-                    >rice Linux</a
-                >
-                and do
-                <a
-                    href="https://en.wikipedia.org/wiki/Capture_the_flag_(cybersecurity)"
-                    >CTFs</a
-                >
-                for fun for crying out loud.
-            </p>
-            <p>
-                When it comes to my tech stack, I don't really have one. As long
-                as you give me a
-                <a
-                    href="https://en.wikipedia.org/wiki/Garbage_collection_(computer_science)"
-                    >GC</a
-                >, I can make do with basically anything. But since this genuine
-                answer is bad for
-                <a
-                    href="https://en.wikipedia.org/wiki/Search_engine_optimization"
-                    >SEO</a
-                >, let me add some stuff that I feel comfortable with:
-            </p>
-            <div class="wrapper">
-                <span>Languages:</span><span class="invert">Ruby</span
-                ><span class="invert">Python</span
-                ><span class="invert">TypeScript</span
-                ><span class="invert">JavaScript</span
-                ><span class="outline">Java</span><span class="outline">Go</span
-                ><span class="outline">Bash</span><span class="outline">C</span
-                ><span class="outline">C++</span>
-            </div>
-            <div class="wrapper">
-                <span>Supplementary:</span><span class="invert">SQL</span
-                ><span class="invert">HTML</span><span class="invert">CSS</span
-                ><span class="invert">SASS</span
-                ><span class="invert">Markdown</span
-                ><span class="outline">LaTeX</span>
-            </div>
-            <div class="wrapper">
-                <span>Tools:</span><span class="invert">Git</span
-                ><span class="invert">Linux</span><span class="invert">Vim</span
-                ><span class="invert">Jira</span
-                ><span class="outline">Jenkins</span
-                ><span class="outline">Mocha</span>
-            </div>
-        </div>
-        <div class="branch">
-            <div class="checkout">
-                <h2>Education</h2>
-                <h3 style="margin: 1rem 0 0 1rem">
-                    BSc in Applied Informatics
-                </h3>
-                <a href="https://fis.vse.cz/english/">
-                    <h3 style="margin: 0 0 1rem 1rem">
-                        Prague University of Economics and Business<br /><span
-                            style="font-weight: normal"
-                            >Faculty of Informatics and Statistics</span
-                        >
-                    </h3></a
-                >
-                <p><em>September 2024 - Present</em></p>
-            </div>
-            <div class="checkout">
-                <h2>Occupation</h2>
-                <h3 style="margin: 1rem 0 0 1rem">QA Automation Trainee</h3>
-                <a href="https://www.kb.cz/cs/obcane"
-                    ><h3 style="margin: 0 0 1rem 1rem">
-                        Komerční banka, a.s.
-                    </h3></a
-                >
-                <p><em>August 2025 - Present</em></p>
-            </div>
-        </div>
-        <div class="repo" id="code">
-            $ ls ~/code<span class="hidden"
-                >/the_few_somewhat_decent_projects</span
-            >
-        </div>
-        <div class="commit" id="wanikani-tui">
-            <h2>
-                <a href="https://github.com/Everesh/WaniKani-TUI"
-                    >WaniKani TUI</a
-                >
-            </h2>
-            <div class="tags">
-                <div class="tag">Ruby</div>
-                <div class="tag">Python</div>
-                <div class="tag">SQLite</div>
-                <div class="tag">API integration</div>
-                <div class="tag">Test Suite</div>
-                <div class="tag">Customizable</div>
-            </div>
-            <div>
+        <div class="upstream">
+            <div class="repo no-margin-top" id="whoami">$ whoami</div>
+            <div class="commit" id="about">
+                <h2>Hey, I'm Jan</h2>
                 <p>
-                    Terminal-based client for the
-                    <a href="https://www.wanikani.com//about"
-                        >WaniKani web app</a
-                    >, built using the curses library.
-                </p>
-                <p>For when you need to do your reviews over SSH</p>
-            </div>
-            <div style="margin: -1rem 0 -3rem 0">
-                <script
-                    src="https://asciinema.org/a/SR1GZvhXX60ClSV1Eb9QG7yur.js"
-                    id="asciicast-SR1GZvhXX60ClSV1Eb9QG7yur"
-                    async="true"
-                ></script>
-            </div>
-        </div>
-        <div class="commit" id="wanikani-elementary-dark">
-            <h2>
-                <a href="https://github.com/Everesh/WaniKani-ElementaryDark"
-                    >WaniKani Elementary Dark</a
-                >
-            </h2>
-            <div class="tags">
-                <div class="tag">SCSS</div>
-                <div class="tag">Bash</div>
-                <div class="tag">Stylus</div>
-                <div class="tag">Customizable</div>
-            </div>
-            <div>
-                <p>
-                    Custom stylesheet for
-                    <a href="https://www.wanikani.com//about">WaniKani</a> with
-                    thousands of users across
+                    I'm a mostly self-taught developer with genuine interest in
+                    technology. These are not just empty words, I
                     <a
-                        href="https://userstyles.world/style/22026/wanikani-elementary-dark"
-                        >version 3</a
+                        href="https://excaliburzero.gitbooks.io/an-introduction-to-linux-ricing/content/ricing.html"
+                        >rice Linux</a
                     >
-                    and
+                    and do
                     <a
-                        href="https://userstyles.world/style/8103/legacy-wanikani-elementary-dark"
-                        >version 2</a
-                    >.
+                        href="https://en.wikipedia.org/wiki/Capture_the_flag_(cybersecurity)"
+                        >CTFs</a
+                    >
+                    for fun for crying out loud.
                 </p>
                 <p>
-                    You can find more about it on the
+                    When it comes to my tech stack, I don't really have one. As
+                    long as you give me a
                     <a
-                        href="https://community.wanikani.com/t/userstyle-elementary-dark/"
-                        >WaniKani forum</a
-                    >.
+                        href="https://en.wikipedia.org/wiki/Garbage_collection_(computer_science)"
+                        >GC</a
+                    >, I can make do with basically anything. But since this
+                    genuine answer is bad for
+                    <a
+                        href="https://en.wikipedia.org/wiki/Search_engine_optimization"
+                        >SEO</a
+                    >, let me add some stuff that I feel comfortable with:
                 </p>
+                <div class="wrapper">
+                    <span>Languages:</span><span class="invert">Ruby</span
+                    ><span class="invert">Python</span
+                    ><span class="invert">TypeScript</span
+                    ><span class="invert">JavaScript</span
+                    ><span class="outline">Java</span
+                    ><span class="outline">Go</span
+                    ><span class="outline">Bash</span
+                    ><span class="outline">C</span
+                    ><span class="outline">C++</span>
+                </div>
+                <div class="wrapper">
+                    <span>Supplementary:</span><span class="invert">SQL</span
+                    ><span class="invert">HTML</span
+                    ><span class="invert">CSS</span
+                    ><span class="invert">SASS</span
+                    ><span class="invert">Markdown</span
+                    ><span class="outline">LaTeX</span>
+                </div>
+                <div class="wrapper">
+                    <span>Tools:</span><span class="invert">Git</span
+                    ><span class="invert">Linux</span
+                    ><span class="invert">Vim</span
+                    ><span class="invert">Jira</span
+                    ><span class="outline">Jenkins</span
+                    ><span class="outline">Mocha</span>
+                </div>
             </div>
-            <img
-                style="width: 100%; height: auto; margin: 1rem 0"
-                src="https://github.com/user-attachments/assets/4892bc85-4e6b-4d77-8d09-67b7652b7248"
-                alt="Demo GIF"
-            />
+            <div class="branch">
+                <div class="checkout">
+                    <h2>Education</h2>
+                    <h3 style="margin: 1rem 0 0 1rem">
+                        BSc in Applied Informatics
+                    </h3>
+                    <a href="https://fis.vse.cz/english/">
+                        <h3 style="margin: 0 0 1rem 1rem">
+                            Prague University of Economics and Business<br /><span
+                                style="font-weight: normal"
+                                >Faculty of Informatics and Statistics</span
+                            >
+                        </h3></a
+                    >
+                    <p><em>September 2024 - Present</em></p>
+                </div>
+                <div class="checkout">
+                    <h2>Occupation</h2>
+                    <h3 style="margin: 1rem 0 0 1rem">QA Automation Trainee</h3>
+                    <a href="https://www.kb.cz/cs/obcane"
+                        ><h3 style="margin: 0 0 1rem 1rem">
+                            Komerční banka, a.s.
+                        </h3></a
+                    >
+                    <p><em>August 2025 - Present</em></p>
+                </div>
+            </div>
+            <div class="repo" id="code">$ ls ~/code</div>
+            <div class="commit" id="wanikani-tui">
+                <h2>
+                    <a href="https://github.com/Everesh/WaniKani-TUI"
+                        >WaniKani TUI</a
+                    >
+                </h2>
+                <div class="tags">
+                    <div class="tag">Ruby</div>
+                    <div class="tag">Python</div>
+                    <div class="tag">SQLite</div>
+                    <div class="tag">API integration</div>
+                    <div class="tag">Test Suite</div>
+                    <div class="tag">Customizable</div>
+                </div>
+                <div>
+                    <p>
+                        Terminal-based client for the
+                        <a href="https://www.wanikani.com//about"
+                            >WaniKani web app</a
+                        >, built using the curses library.
+                    </p>
+                    <p>For when you need to do your reviews over SSH</p>
+                </div>
+                <div style="margin: -1rem 0 -3rem 0">
+                    <script
+                        src="https://asciinema.org/a/SR1GZvhXX60ClSV1Eb9QG7yur.js"
+                        id="asciicast-SR1GZvhXX60ClSV1Eb9QG7yur"
+                        async="true"
+                    ></script>
+                </div>
+            </div>
+            <div class="commit" id="wanikani-elementary-dark">
+                <h2>
+                    <a href="https://github.com/Everesh/WaniKani-ElementaryDark"
+                        >WaniKani Elementary Dark</a
+                    >
+                </h2>
+                <div class="tags">
+                    <div class="tag">SCSS</div>
+                    <div class="tag">Bash</div>
+                    <div class="tag">Stylus</div>
+                    <div class="tag">Customizable</div>
+                </div>
+                <div>
+                    <p>
+                        Custom stylesheet for
+                        <a href="https://www.wanikani.com//about">WaniKani</a>
+                        with thousands of users across
+                        <a
+                            href="https://userstyles.world/style/22026/wanikani-elementary-dark"
+                            >version 3</a
+                        >
+                        and
+                        <a
+                            href="https://userstyles.world/style/8103/legacy-wanikani-elementary-dark"
+                            >version 2</a
+                        >.
+                    </p>
+                    <p>
+                        You can find more about it on the
+                        <a
+                            href="https://community.wanikani.com/t/userstyle-elementary-dark/"
+                            >WaniKani forum</a
+                        >.
+                    </p>
+                </div>
+                <img
+                    style="width: 100%; height: auto; margin: 1rem 0"
+                    src="https://github.com/user-attachments/assets/4892bc85-4e6b-4d77-8d09-67b7652b7248"
+                    alt="Demo GIF"
+                />
+            </div>
         </div>
     </body>
 </html>
