--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <div id="socials">
+        <div id="top-left" class="top">
+            <span>v1.0.0</span>
+        </div>
+        <div id="top-right" class="top">
             <button id="theme-toggle">[Theme: Light]</button>
             <a href="https://www.linkedin.com/in/jan-jurka/">[LinkedIn]</a>
             <a href="https://github.com/Everesh">[GitHub]</a>
